objects/project_cloud__Meeting_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Access_Level__c</fullName>
        <inlineHelpText>This picklist will allow Meeting Managers to determine who will be a Viewer or a Manager on the Meeting. This will specify if a user can view meeting minutes or contribute to the meeting minutes.</inlineHelpText>
        <label>Access Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manage</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                    <default>true</default>
                    <label>View</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field allows users to associate Contacts to the Meeting.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsAttended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the user has attended the meeting.</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Meeting__c</fullName>
        <inlineHelpText>This field show what Meeting the Meeting Attendee is related too.</inlineHelpText>
        <label>Meeting</label>
        <referenceTo>project_cloud__Meeting__c</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field allows users to associate Users to the Meeting if they have a Cloud Coach License.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>ATNDE-{0}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Access_Level_User_Only</fullName>
        <active>true</active>
        <description>When the attendee is a user an access level is required. If the attendee is a contact the access level must be blank.</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__User__c),
	NOT(ISBLANK(project_cloud__Access_Level__c)),
/*ELSE*/
	ISBLANK(project_cloud__Access_Level__c)
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Access_Level__c</errorDisplayField>
        <errorMessage>User attendees require an access level. Contact attendees must not have an access level defined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Attendee_Required</fullName>
        <active>true</active>
        <description>A Meeting Attendee requires a person t o be selected, either a Contact or User</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__User__c), 0, 1) + IF(ISBLANK(project_cloud__Contact__c), 0, 1) != 1</errorConditionFormula>
        <errorMessage>A Meeting Attendee requires a single User or Contact to be specified.</errorMessage>
    </validationRules>
</CustomObject>